test/Serialization/search-paths.code
// RUN: %empty-directory(%t)
// RUN: %empty-directory(%t/secret)
// RUN: %target-language-frontend -emit-module -o %t/secret %S/Inputs/struct_with_operators.code
// RUN: %empty-directory(%t/Frameworks/has_alias.framework/Modules/has_alias.codemodule)
// RUN: %target-language-frontend -emit-module -o %t/Frameworks/has_alias.framework/Modules/has_alias.codemodule/%target-languagemodule-name %S/Inputs/alias.code -module-name has_alias

// RUN: %target-language-frontend -emit-module -o %t -I %t/secret -F %t/Frameworks -Fsystem %t/SystemFrameworks -parse-as-library %S/Inputs/has_xref.code
// RUN: %target-language-frontend %s -typecheck -I %t -verify -show-diagnostics-after-fatal

// Try again, treating has_xref as a main file to force serialization to occur.
// RUN: %target-language-frontend -emit-module -o %t -I %t/secret -F %t/Frameworks -Fsystem %t/SystemFrameworks %S/Inputs/has_xref.code
// RUN: %target-language-frontend %s -typecheck -I %t

// RUN: %target-language-frontend -emit-module -o %t -I %t/secret -F %t/Frameworks -Fsystem %t/SystemFrameworks -parse-as-library %S/Inputs/has_xref.code -serialize-debugging-options
// RUN: %target-language-frontend %s -typecheck -I %t

// RUN: %target-language-frontend -emit-module -o %t -I %t/secret -F %t/Frameworks -Fsystem %t/SystemFrameworks -parse-as-library %S/Inputs/has_xref.code -application-extension
// RUN: %target-language-frontend %s -typecheck -I %t

// Make sure -no-serialize-debugging-options has the desired effect.
// RUN: %target-language-frontend -emit-module -o %t -I %t/secret -F %t/Frameworks -Fsystem %t/SystemFrameworks -parse-as-library %S/Inputs/has_xref.code -application-extension -no-serialize-debugging-options
// RUN: %target-language-frontend %s -typecheck -I %t -verify -show-diagnostics-after-fatal

// Make sure we don't end up with duplicate search paths.
// RUN: %target-languagec_driver -emit-module -o %t/has_xref.codemodule -I %t/secret -F %t/Frameworks -Fsystem %t/SystemFrameworks -parse-as-library %S/Inputs/has_xref.code %S/../Inputs/empty.code -Xfrontend -serialize-debugging-options
// RUN: %target-language-frontend %s -typecheck -I %t
// RUN: toolchain-bcanalyzer -dump %t/has_xref.codemodule | %FileCheck %s

// RUN: %target-language-frontend %s -emit-module -o %t/main.codemodule -I %t -I %t/secret -F %t/Frameworks -Fsystem %t/SystemFrameworks
// RUN: toolchain-bcanalyzer -dump %t/main.codemodule | %FileCheck %s

import has_xref // expected-error {{missing required modules: 'has_alias', 'struct_with_operators'}}

numeric(42) // expected-error {{cannot find 'numeric' in scope}}

// CHECK: <INPUT_BLOCK
// CHECK-NOT: /secret'
// CHECK-NOT: /Frameworks'
// CHECK: <SEARCH_PATH abbrevid={{[0-9]+}} op0=1 op1=0/> blob data = '{{.+}}/Frameworks'
// CHECK-NOT: /secret'
// CHECK-NOT: /Frameworks'
// CHECK-NOT: /SystemFrameworks'
// CHECK: <SEARCH_PATH abbrevid={{[0-9]+}} op0=1 op1=1/> blob data = '{{.+}}/SystemFrameworks'
// CHECK-NOT: /secret'
// CHECK-NOT: /Frameworks'
// CHECK-NOT: /SystemFrameworks'
// CHECK: <SEARCH_PATH abbrevid={{[0-9]+}} op0=0 op1=0/> blob data = '{{.+}}/secret'
// CHECK-NOT: /secret'
// CHECK-NOT: /Frameworks'
// CHECK-NOT: /SystemFrameworks'
// CHECK: </INPUT_BLOCK>
